RESOLVED FIXED217289
Fix UTF-8 encoding in URL parsing
https://bugs.webkit.org/show_bug.cgi?id=217289
Summary Fix UTF-8 encoding in URL parsing
Alex Christensen
Reported 2020-10-03 20:10:37 PDT
Fix UTF-8 encoding in URL parsing
Attachments
Patch (14.45 KB, patch)
2020-10-03 20:13 PDT, Alex Christensen
no flags
Patch (18.66 KB, patch)
2020-10-03 21:00 PDT, Alex Christensen
darin: review+
Alex Christensen
Comment 1 2020-10-03 20:13:30 PDT
EWS Watchlist
Comment 2 2020-10-03 20:14:18 PDT
This patch modifies the imported WPT tests. Please ensure that any changes on the tests (not coming from a WPT import) are exported to WPT. Please see https://trac.webkit.org/wiki/WPTExportProcess
Alex Christensen
Comment 3 2020-10-03 21:00:19 PDT
Alex Christensen
Comment 4 2020-10-05 07:41:10 PDT
Radar WebKit Bug Importer
Comment 5 2020-10-05 07:42:18 PDT
Note You need to log in before you can comment on or make changes to this bug.