Fix UTF-8 encoding in URL parsing https://bugs.webkit.org/show_bug.cgi?id=217289

Reviewed by Darin Adler.

LayoutTests/imported/w3c:

* web-platform-tests/url/a-element-expected.txt:
* web-platform-tests/url/a-element-origin-expected.txt:
* web-platform-tests/url/a-element-origin-xhtml-expected.txt:
* web-platform-tests/url/a-element-xhtml-expected.txt:
* web-platform-tests/url/resources/urltestdata.json:
* web-platform-tests/url/url-constructor-expected.txt:
* web-platform-tests/url/url-origin-expected.txt:

Source/WTF:

This matches the behavior of Firefox and the Unicode and whatwg encoding specifications.

* wtf/URLParser.cpp:
(WTF::URLParser::utf8PercentEncode):
(WTF::URLParser::utf8QueryEncode):
(WTF::URLParser::parseHostAndPort):

Tools:

* TestWebKitAPI/Tests/WTF/URLParser.cpp:
(TestWebKitAPI::TEST_F):

LayoutTests:

* fast/url/anchor-expected.txt:
* fast/url/anchor.html:
* fast/url/path-expected.txt:
* fast/url/path.html:



Canonical link: https://commits.webkit.org/230072@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267963 268f45cc-cd09-0410-ab3c-d52691b4dbfc